[tool.poetry]
name = "pongy"
version = "0.3.0"
description = "Ping-pong multiplayer client-server game up to 4 players over network in early development stage."
authors = ["Vladimir Vyalov <vyalov.v@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/vyalovvldmr/pongy"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS",
    "Topic :: Games/Entertainment :: Board Games",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Intended Audience :: Developers",
]
packages = [
    { include = "pongy" },
    { include = "pongy/server" },
    { include = "pongy/ui" },
    { include = "pongy/ui/widgets" },
    { include = "run.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "2.1.2"
pydantic = "1.10.2"
click = "8.1.3"
aiohttp = {extras = ["speedups"], version = "3.8.1"}
python-json-logger = "2.0.4"

[tool.poetry.dev-dependencies]
flake8 = "5.0.4"
black = "22.8.0"
mypy = "0.971"
pylint = "2.15.2"
pre-commit = "2.20.0"

[tool.poetry.scripts]
pongy = "run:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
